# omega

./: package-lock.json
backend/: .env  =3.10  db.sqlite3  keycloak.py  pyproject.toml  requirements.txt
backend/ADSapp/: apps.py  serializers.py  urls.py  views.py
backend/keycloak_app/: apps.py  authentication.py  keycloak_utils.py  middleware.py  urls.py  views.py
backend/omega_project/: settings.py  urls.py  wsgi.py
backend/rule__api/: admin.py  apps.py  models.py  private_key.pem  serializers.py  urls.py  views.py
backend/rule__api/migrations/: 0001_initial.py  0002_rule_rule_number.py
backend/userAuth_app/: admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/userAuth_app/migrations/: 0001_initial.py  0002_adgrouproleassignment_ldapgroup_alter_user_role_and_more.py  0003_alter_user_role.py  0004_alter_user_role.py
frontend/: .env  components.d.ts  index.html  package-lock.json  package.json
frontend/locales/: en_US.json
frontend/src/: key.vue
frontend/src/components/common/: LangsSwitch.vue
frontend/src/layouts/: leftMenu.layout.vue
frontend/src/layouts/components/header/: UserCenter.vue
frontend/src/plugins/: keycloak.js
frontend/src/router/: guard.ts  routes.static.ts
frontend/src/store/: auth.ts
frontend/src/typings/: components.d.ts
frontend/src/utils/: local.ts
frontend/src/views/dashboard/monitor/: index.vue
frontend/src/views/login/: index.vue
frontend/src/views/monitoring/: lineChart.vue  linux.vue  windowChart.vue  windows-m.vue
(+14 files in other folders)
